tests/invalid/array_literal_missing_element.wio
fn Entry() -> i32 {
    let values = [1, ];
    return values.Length();
}
